+ Add cool dialog for when you've checked in and must display a breakdown. + Use only one "Checkin" type
committer: Joe LaPenna <joe@joelapenna.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,18 +36,14 @@
 
     <activity
       android:name=".VenueCheckinActivity">
-      <intent-filter>
-        <action
-          android:name="android.intent.action.MAIN" />
-      </intent-filter>
     </activity>
 
     <activity
       android:name=".VenueInfoActivity">
-      <intent-filter>
-        <action
-          android:name="android.intent.action.MAIN" />
-      </intent-filter>
+    </activity>
+
+    <activity
+      android:name=".VenueYelpActivity">
     </activity>
 
   </application>
