+Add a VenueSearch activity, list adapter, etc. +Speed up the tips list view by pre-caching the html tip content. +Add a /api/venues captture.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -43,6 +43,15 @@
     </activity>
 
     <activity
+      android:name=".VenueSearchActivity"
+      android:label="@string/venue_search_activity_name">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+      </intent-filter>
+    </activity>
+
+    <activity
       android:name=".VenueYelpActivity">
     </activity>
 
