--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
     android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
 
   <application
+    android:name="Foursquared"
     android:icon="@drawable/icon"
     android:label="@string/app_name">
 
