--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,9 +6,9 @@
   android:versionCode="2009040500">
 
   <uses-permission
-    android:name="android.permission.INTERNET" />
-  <uses-permission
     android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission
+    android:name="android.permission.INTERNET" />
   <uses-permission
     android:name="android.permission.READ_PHONE_STATE" />
 
@@ -60,6 +60,8 @@
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
+        <category
+          android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
