--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,8 @@
   android:versionCode="2009040500">
 
   <uses-permission
+    android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission
     android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission
     android:name="android.permission.INTERNET" />
