--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,7 +64,7 @@
     </activity>
 
     <activity
-      android:name=".VenueInfoActivity">
+      android:name=".VenueMapActivity">
     </activity>
 
     <activity
