+Put tips in their proper place -- their own tab.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -88,6 +88,10 @@
     </activity>
 
     <activity
+      android:name=".VenueTipsActivity">
+    </activity>
+
+    <activity
       android:name=".VenueYelpActivity">
     </activity>
 
