--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -79,12 +79,12 @@
         <action
           android:name="android.intent.action.SEARCH" />
       </intent-filter>
-        <meta-data
-          android:name="android.app.default_searchable"
-          android:value=".VenueSearchActivity" />
-        <meta-data
-          android:name="android.app.searchable"
-          android:resource="@xml/searchable" />
+      <meta-data
+        android:name="android.app.default_searchable"
+        android:value=".VenueSearchActivity" />
+      <meta-data
+        android:name="android.app.searchable"
+        android:resource="@xml/searchable" />
     </activity>
 
     <activity
@@ -94,6 +94,10 @@
     <activity
       android:name=".VenueYelpActivity">
     </activity>
+
+    <provider
+      android:name=".providers.VenueQuerySuggestionsProvider"
+      android:authorities="com.joelapenna.foursquared.providers.VenueQuerySuggestionsProvider" />
 
   </application>
 
