--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -86,6 +86,10 @@
         android:name="android.app.searchable"
         android:resource="@xml/searchable" />
     </activity>
+    
+    <activity
+      android:name=".VenueSearchMapActivity">
+    </activity>
 
     <activity
       android:name=".VenueTipsActivity">
