--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,9 @@
   <uses-permission
     android:name="android.permission.READ_PHONE_STATE" />
 
+  <uses-sdk
+    android:minSdkVersion="3" />
+
   <application
     android:name="Foursquared"
     android:icon="@drawable/icon"
@@ -21,6 +24,18 @@
 
     <uses-library
       android:name="com.google.android.maps" />
+
+    <activity
+      android:name=".MainActivity"
+      android:label="@string/app_name">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+        <category
+          android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+
 
     <activity
       android:name=".test.TestActivity"
@@ -31,16 +46,9 @@
           android:name="android.intent.action.MAIN" />
         <action
           android:name="android.intent.action.SEARCH" />
-        <meta-data
-          android:name="android.app.default_searchable"
-          android:value=".TestActivity" />
-        <meta-data
-          android:name="android.app.searchable"
-          android:resource="@xml/searchable" />
       </intent-filter>
-
-
     </activity>
+
 
     <activity
       android:name=".PreferenceActivity"
@@ -50,6 +58,30 @@
           android:name="android.intent.action.MAIN" />
       </intent-filter>
     </activity>
+
+
+    <activity
+      android:name=".SearchVenueActivity"
+      android:label="@string/venue_search_activity_name"
+      android:launchMode="singleTop">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+        <action
+          android:name="android.intent.action.SEARCH" />
+      </intent-filter>
+      <meta-data
+        android:name="android.app.default_searchable"
+        android:value=".SearchVenueActivity" />
+      <meta-data
+        android:name="android.app.searchable"
+        android:resource="@xml/searchable" />
+    </activity>
+
+    <activity
+      android:name=".SearchVenueMapActivity">
+    </activity>
+
 
     <activity
       android:name=".VenueActivity">
@@ -68,36 +100,13 @@
     </activity>
 
     <activity
-      android:name=".SearchVenueActivity"
-      android:label="@string/venue_search_activity_name"
-      android:launchMode="singleTop">
-      <intent-filter>
-        <action
-          android:name="android.intent.action.MAIN" />
-        <category
-          android:name="android.intent.category.LAUNCHER" />
-        <action
-          android:name="android.intent.action.SEARCH" />
-      </intent-filter>
-      <meta-data
-        android:name="android.app.default_searchable"
-        android:value=".SearchVenueActivity" />
-      <meta-data
-        android:name="android.app.searchable"
-        android:resource="@xml/searchable" />
-    </activity>
-
-    <activity
-      android:name=".SearchVenueMapActivity">
-    </activity>
-
-    <activity
       android:name=".VenueTipsActivity">
     </activity>
 
     <activity
       android:name=".VenueYelpActivity">
     </activity>
+
 
     <provider
       android:name=".providers.VenueQuerySuggestionsProvider"
