--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,9 @@
     android:label="@string/app_name">
 
     <uses-library
+      android:name="android.test.runner" />
+
+    <uses-library
       android:name="com.google.android.maps" />
 
     <activity
@@ -159,4 +162,8 @@
 
   </application>
 
+  <instrumentation
+    android:name=".test.InstrumentationTestRunner"
+    android:targetPackage="com.joelapenna.foursquared">
+  </instrumentation>
 </manifest>
