Basic stats activity, just loads the 4sq stats page in a WebView.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -119,6 +119,15 @@
 
 
     <activity
+      android:name=".StatsActivity">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+      </intent-filter>
+    </activity>
+
+
+    <activity
       android:name=".UserActivity"
       android:theme="@android:style/Theme.Dialog">
       <intent-filter>
