--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,8 @@
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="lib/signpost-1.0-SNAPSHOT.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/dumpcatcher"/>
+	<classpathentry kind="lib" path="lib/signpost-commonshttp.jar"/>
+	<classpathentry kind="lib" path="lib/signpost-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
