--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -47,6 +47,44 @@
 
 
     <activity
+      android:name=".BrowsableActivity"
+      android:label="@string/app_name">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.VIEW" />
+        <category
+          android:name="android.intent.category.DEFAULT" />
+        <category
+          android:name="android.intent.category.BROWSABLE" />
+        <data
+          android:scheme="http"
+          android:host="playfoursquare.com"
+          android:pathPrefix="/venue/" />
+        <data
+          android:scheme="http"
+          android:host="m.playfoursquare.com"
+          android:pathPrefix="/venue/" />
+        <data
+          android:scheme="http"
+          android:host="playfoursquare.com"
+          android:pathPrefix="/login" />
+        <data
+          android:scheme="http"
+          android:host="m.playfoursquare.com"
+          android:pathPrefix="/login" />
+        <data
+          android:scheme="http"
+          android:host="playfoursquare.com"
+          android:pathPrefix="/checkins" />
+        <data
+          android:scheme="http"
+          android:host="m.playfoursquare.com"
+          android:pathPrefix="/checkins" />
+      </intent-filter>
+    </activity>
+
+
+    <activity
       android:name=".CheckinsActivity"
       android:label="@string/checkins_activity_name"
       android:launchMode="singleTop">
@@ -58,6 +96,8 @@
 
     <activity
       android:name=".CheckinsMapActivity">
+      <category
+        android:name="android.intent.category.TAB" />
     </activity>
 
 
@@ -72,6 +112,8 @@
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
+        <category
+          android:name="android.intent.category.PREFERENCE" />
       </intent-filter>
     </activity>
 
@@ -96,6 +138,8 @@
 
     <activity
       android:name=".SearchVenuesMapActivity">
+      <category
+        android:name="android.intent.category.TAB" />
     </activity>
 
 
@@ -143,14 +187,20 @@
 
     <activity
       android:name=".VenueCheckinActivity">
+      <category
+        android:name="android.intent.category.TAB" />
     </activity>
 
     <activity
       android:name=".VenueMapActivity">
+      <category
+        android:name="android.intent.category.TAB" />
     </activity>
 
     <activity
       android:name=".VenueTipsActivity">
+      <category
+        android:name="android.intent.category.TAB" />
     </activity>
 
 
