Refactor MainActivity into MainActivity and LoginActivity.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -62,6 +62,11 @@
 
 
     <activity
+      android:name=".LoginActivity">
+    </activity>
+
+
+    <activity
       android:name=".PreferenceActivity"
       android:label="@string/preference_activity_name">
       <intent-filter>
