--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
   <application
     android:name="Foursquared"
     android:icon="@drawable/icon"
-    android:label="@string/app_name">
+    android:label="@string/app_name"
+    android:theme="@style/FoursquareTheme">
 
     <uses-library
       android:name="com.google.android.maps" />
@@ -96,8 +97,10 @@
 
     <activity
       android:name=".CheckinsMapActivity">
-      <category
-        android:name="android.intent.category.TAB" />
+      <intent-filter>
+        <category
+          android:name="android.intent.category.TAB" />
+      </intent-filter>
     </activity>
 
 
@@ -138,8 +141,10 @@
 
     <activity
       android:name=".SearchVenuesMapActivity">
-      <category
-        android:name="android.intent.category.TAB" />
+      <intent-filter>
+        <category
+          android:name="android.intent.category.TAB" />
+      </intent-filter>
     </activity>
 
 
@@ -187,20 +192,26 @@
 
     <activity
       android:name=".VenueCheckinActivity">
-      <category
-        android:name="android.intent.category.TAB" />
+      <intent-filter>
+        <category
+          android:name="android.intent.category.TAB" />
+      </intent-filter>
     </activity>
 
     <activity
       android:name=".VenueMapActivity">
-      <category
-        android:name="android.intent.category.TAB" />
+      <intent-filter>
+        <category
+          android:name="android.intent.category.TAB" />
+      </intent-filter>
     </activity>
 
     <activity
       android:name=".VenueTipsActivity">
-      <category
-        android:name="android.intent.category.TAB" />
+      <intent-filter>
+        <category
+          android:name="android.intent.category.TAB" />
+      </intent-filter>
     </activity>
 
 
