--- a/tests/.classpath
+++ b/tests/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/foursquared"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="/foursquared/lib/signpost-commonshttp.jar"/>
+	<classpathentry kind="lib" path="/foursquared/lib/signpost-core.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
