Add ignore for FoursquaredSettings file.

--- a/.hgignore
+++ b/.hgignore
@@ -8,6 +8,8 @@ syntax: regexp
 ^main/\.settings
 ^tests/\.settings
 
+^main/src/com/joelapenna/foursquared/FoursquaredSettings.java
+
 ^main/res/values/credentials.xml
 ^tests/src/com/joelapenna/foursquare/TestCredentials.java
 
