--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
 
     <activity
       android:name=".MainActivity"
-      android:label="@string/app_name">
+      android:label="@string/app_name"
+      android:theme="@android:style/Theme.NoDisplay">
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
