Remove the titlebar for the shout activity.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -165,7 +165,8 @@
 
     <activity
       android:name=".ShoutActivity"
-      android:label="@string/shout_activity_label">
+      android:label="@string/shout_activity_label"
+      android:theme="@android:style/Theme.Dialog">
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
