--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.joelapenna.foursquared"
-  android:versionName="2009-08-09"
-  android:versionCode="2009080900">
+  android:versionName="2009-08-11" android:versionCode="2009081100">
 
   <uses-permission
     android:name="android.permission.ACCESS_COARSE_LOCATION" />
