--- a/main/build.xml
+++ b/main/build.xml
@@ -65,6 +65,8 @@
       <echo>Done cleaning.</echo>
     </target>
 
-
+    <target name="echoproperties">
+      <echoproperties />
+    </target>
 
 </project>
