--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -23,6 +23,14 @@
     android:label="@string/app_name"
     android:theme="@style/FoursquareTheme">
 
+    <meta-data
+      android:name="android.app.default_searchable"
+      android:value=".SearchVenuesActivity" />
+
+    <provider
+      android:name=".providers.VenueQuerySuggestionsProvider"
+      android:authorities="com.joelapenna.foursquared.providers.VenueQuerySuggestionsProvider" />
+
     <uses-library
       android:name="com.google.android.maps" />
 
@@ -137,9 +145,9 @@
       android:launchMode="singleTop">
       <intent-filter>
         <action
-          android:name="android.intent.action.MAIN" />
-        <action
           android:name="android.intent.action.SEARCH" />
+        <category
+          android:name="android.intent.category.DEFAULT" />
       </intent-filter>
       <intent-filter>
         <action
@@ -151,9 +159,6 @@
         <action
           android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
       </intent-filter>
-      <meta-data
-        android:name="android.app.default_searchable"
-        android:value=".SearchVenueActivity" />
       <meta-data
         android:name="android.app.searchable"
         android:resource="@xml/searchable" />
@@ -229,11 +234,6 @@
     <activity
       android:name=".VenueTipsActivity">
     </activity>
-
-
-    <provider
-      android:name=".providers.VenueQuerySuggestionsProvider"
-      android:authorities="com.joelapenna.foursquared.providers.VenueQuerySuggestionsProvider" />
 
   </application>
 </manifest>
