--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
   <uses-permission
     android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission
+    android:name="android.permission.CALL_PHONE" />
+  <uses-permission
     android:name="android.permission.INTERNET" />
   <uses-permission
     android:name="android.permission.READ_PHONE_STATE" />
