--- a/main/.classpath
+++ b/main/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="lib" path="lib/signpost-commonshttp.jar"/>
 	<classpathentry kind="lib" path="lib/signpost-core.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/dumpcatcher"/>
+	<classpathentry kind="lib" path="lib/dumpcatcher.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
