Clean out the tests directory a bit removing deps on some 3rd party libraries in the tests.
Update issue 7

--- a/tests/.project
+++ b/tests/.project
@@ -3,6 +3,7 @@
 	<name>foursquared_tests</name>
 	<comment></comment>
 	<projects>
+		<project>foursquared</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
