--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -1,35 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.joelapenna.foursquared.tests"
-  android:versionName="2009-07-04"
-  android:versionCode="2009070400">
-
-  <uses-permission
-    android:name="android.permission.ACCESS_COARSE_LOCATION" />
-  <uses-permission
-    android:name="android.permission.ACCESS_FINE_LOCATION" />
-  <uses-permission
-    android:name="android.permission.INTERNET" />
-  <uses-permission
-    android:name="android.permission.READ_PHONE_STATE" />
-
-  <uses-sdk
-    android:minSdkVersion="3" />
-
+  package="com.joelapenna.foursquared.test"
+  android:versionName="2009-09-26"
+  android:versionCode="2009092600">
   <application
-    android:name="Foursquared">
+    android:label="@string/app_name">
 
     <uses-library
       android:name="android.test.runner" />
-
-    <uses-library
-      android:name="com.google.android.maps" />
-
   </application>
-
+  <uses-sdk
+    android:minSdkVersion="3" />
   <instrumentation
-    android:name="android.test.InstrumentationTestRunner"
-    android:targetPackage="com.joelapenna.foursquared">
-  </instrumentation>
+    android:targetPackage="com.joelapenna.foursquared"
+    android:name="android.test.InstrumentationTestRunner" />
 </manifest>
