--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -123,7 +123,8 @@
 
 
     <activity
-      android:name=".LoginActivity">
+      android:name=".LoginActivity"
+      android:launchMode="singleInstance">
     </activity>
 
 
