v0 of the Foursquare widget.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -246,5 +246,21 @@
       android:name=".VenueTipsActivity">
     </activity>
 
+    <receiver
+      android:name=".appwidget.SpecialDealsAppWidgetProvider">
+      <intent-filter>
+        <action
+          android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+      </intent-filter>
+      <meta-data
+        android:name="android.appwidget.provider"
+        android:label="@string/specialdeals_appwidget_label"
+        android:resource="@xml/specialdeals_appwidget_info" />
+    </receiver>
+
+    <service
+      android:name=".app.FoursquaredService">
+    </service>
+
   </application>
 </manifest>
