--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -247,15 +247,15 @@
     </activity>
 
     <receiver
-      android:name=".appwidget.SpecialDealsAppWidgetProvider">
+      android:name=".appwidget.SpecialDealsAppWidgetProvider"
+      android:label="@string/specialdeals_appwidget_3x3_label">
       <intent-filter>
         <action
           android:name="android.appwidget.action.APPWIDGET_UPDATE" />
       </intent-filter>
       <meta-data
         android:name="android.appwidget.provider"
-        android:label="@string/specialdeals_appwidget_label"
-        android:resource="@xml/specialdeals_appwidget_info" />
+        android:resource="@xml/specialdeals_appwidget_3x3" />
     </receiver>
 
     <service
