--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -15,9 +15,13 @@
     android:name="android.permission.INTERNET" />
   <uses-permission
     android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
   <uses-sdk
-    android:minSdkVersion="3" />
+    android:minSdkVersion="3"
+    android:targetSdkVersion="4" />
+  <supports-screens
+    largeScreens="true"
+    normalScreens="true"
+    smallScreens="true" />
 
   <application
     android:name="Foursquared"
