--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.joelapenna.foursquared"
-  android:versionName="2009-11-23"
-  android:versionCode="2009112300">
+  android:versionName="2009-12-02" android:versionCode="2009120200">
 
   <uses-permission
     android:name="android.permission.ACCESS_COARSE_LOCATION" />
