Ignoring config changes in manifest and shout Changed layouts to white/blue ( till oveall design change )

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -183,6 +183,7 @@
     <activity
       android:name=".ShoutActivity"
       android:label="@string/shout_activity_label"
+      android:configChanges="keyboardHidden|orientation"
       android:theme="@android:style/Theme.Dialog">
       <intent-filter>
         <action
