--- a/main/.project
+++ b/main/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>foursquared-av</name>
+	<name>foursquared2</name>
 	<comment></comment>
 	<projects>
 	</projects>
