--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
     <provider
       android:name=".providers.VenueQuerySuggestionsProvider"
       android:authorities="com.joelapenna.foursquared.providers.VenueQuerySuggestionsProvider" />
+      
+    <provider android:name=".providers.GlobalSearchProvider"
+      android:authorities="com.joelapenna.foursquared" />
 
     <uses-library
       android:name="com.google.android.maps" />
@@ -173,6 +176,21 @@
       <meta-data
         android:name="android.app.searchable"
         android:resource="@xml/searchable" />
+    </activity>
+    
+    <activity
+      android:name=".GlobalSearchActivity"
+      android:label="@string/app_name"
+      android:launchMode="singleTop">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.SEARCH" />
+        <category
+          android:name="android.intent.category.DEFAULT" />
+      </intent-filter>
+      <meta-data 
+         android:name="android.app.searchable"
+         android:resource="@xml/global_searchable" />
     </activity>
 
     <activity
