--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     android:name="android.permission.INTERNET" />
   <uses-permission
     android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission 
+    android:name="android.permission.READ_CONTACTS" /> 
   <uses-sdk
     android:minSdkVersion="3"
     android:targetSdkVersion="4" />
@@ -263,6 +265,21 @@
 
     <activity
       android:name=".VenueTipsActivity">
+    </activity>
+    
+    <activity
+      android:name=".AddFriendsActivity"
+      android:label="@string/add_friends_activity_label">
+    </activity>
+    
+    <activity
+      android:name=".AddFriendsByUserInputActivity"
+      android:label="@string/add_friends_activity_label">
+    </activity>
+    
+    <activity
+      android:name=".FriendRequestsActivity"
+      android:label="@string/friend_requests_activity_label">
     </activity>
 
     <receiver
