Added activity to handle downloading an image by url, saves it to disk, then launches a view intent to handle viewing the image. This can be used by the UserActivity to show a full-screen high-res version of a user's profile picture.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -281,6 +281,11 @@
       android:name=".FriendRequestsActivity"
       android:label="@string/friend_requests_activity_label">
     </activity>
+    
+    <activity
+      android:name=".FetchImageForViewIntent"
+      android:theme="@style/ThemeTransparentDialogBase.TransparentDialog">
+    </activity> 
 
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
