Added intent filter for loggedout intent to manifest file, removed intent receiver in the AddFriends landing activity, it doesn't require any login state info.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -275,11 +275,19 @@
     <activity
       android:name=".AddFriendsByUserInputActivity"
       android:label="@string/add_friends_activity_label">
+      <intent-filter>
+        <action
+          android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
+      </intent-filter>
     </activity>
     
     <activity
       android:name=".FriendRequestsActivity"
       android:label="@string/friend_requests_activity_label">
+      <intent-filter>
+        <action
+          android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
+      </intent-filter>
     </activity>
     
     <activity
