Implemented parcelable on most of the type classes to support a revamped UserDetailsActivity. Checking in for the commute, this build compiles but it not really complete at all.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -294,6 +294,18 @@
       android:name=".FetchImageForViewIntent"
       android:theme="@style/ThemeTransparentDialogBase.TransparentDialog">
     </activity> 
+    
+    <activity
+      android:name=".UserDetailsActivity">
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+      </intent-filter>
+      <intent-filter>
+        <action
+          android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
+      </intent-filter>
+    </activity>
 
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
