Moved 'friends' tab to 0th position on startup page as requested, added 'me' tab which just shows the logged-in user's own info.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
     android:name="Foursquared"
     android:icon="@drawable/icon"
     android:label="@string/app_name"
-    android:theme="@style/FoursquareTheme" android:debuggable="true">
+    android:theme="@style/FoursquareTheme" >
 
     <meta-data
       android:name="android.app.default_searchable"
