Added some guards on the parcelable code to avoid trying to write null child objects, added simple badge activity dedicated to showing just a simple list of a user's badeges. Would be nice to update this activity to also show all badges the user has yet to unlock as well, optional.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -331,6 +331,14 @@
       </intent-filter>
     </activity>
     
+    <activity
+      android:name=".BadgesActivity">
+      <intent-filter>
+        <action
+          android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
+      </intent-filter>
+    </activity>
+    
     <receiver
       android:name=".appwidget.FriendsAppWidgetProvider"
       android:label="@string/friends_appwidget_3x3_label">
