Using custom dialog background for shout/checkin so titlebar matches blue color we use in other parts of the app. May have to abandon this due to yet another 1.5 quirk where the area around the dialog is not rendered translucent, but an opaque black, awful.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -322,9 +322,10 @@
       </intent-filter>
     </activity>
     
+    <!-- ThemeCustomDlgBase.ThemeCustomDlg -->
     <activity
       android:name=".CheckinOrShoutGatherInfoActivity"
-      android:theme="@android:style/Theme.Dialog"
+      android:theme="@style/ThemeCustomDlgBase.ThemeCustomDlg"
       android:configChanges="keyboardHidden|orientation" >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
