--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -279,7 +279,8 @@
     </activity> 
     
     <activity
-      android:name=".UserDetailsActivity">
+      android:name=".UserDetailsActivity"
+      android:label="@string/app_name">
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
@@ -315,7 +316,8 @@
     </activity>
     
     <activity
-      android:name=".BadgesActivity">
+      android:name=".BadgesActivity"
+      android:label="@string/app_name">
       <intent-filter>
         <action
           android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
