Tried to make UserMayorshipsActivity a bit nicer to look at with a title for the list adapter.

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -357,7 +357,7 @@
     
     <activity
       android:name=".UserMayorshipsActivity"
-      android:label="@string/user_mayorships_activity_title" >
+      android:label="@string/app_name" >
       <intent-filter>
         <action
           android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
