--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.joelapenna.foursquared"
-  android:versionName="2010-03-12" android:versionCode="2010031200">
+  android:versionName="2010-03-19" android:versionCode="2010031900">
 
   <uses-permission
     android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -366,7 +366,7 @@
     
     <activity
       android:name=".ChangelogActivity"
-      android:theme="@style/ThemeCustomDlgBase.ThemeCustomDlg"
+      android:theme="@android:style/Theme.Dialog"
       android:label="@string/changelog_activity_title" />
      
     <receiver
