--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -350,6 +350,15 @@
     </activity>
     
     <activity
+      android:name=".TipActivity"
+      android:label="@string/app_name" >
+      <intent-filter>
+        <action
+          android:name="com.joelapenna.foursquared.intent.action.LOGGED_OUT" />
+      </intent-filter>
+    </activity>
+    
+    <activity
       android:name=".ChangelogActivity"
       android:theme="@android:style/Theme.Dialog"
       android:label="@string/changelog_activity_title" />
