export LoginActivity for use by other applications
specifically, we'll want it for our sync Authenticator

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -141,7 +141,8 @@
 
     <activity
       android:name=".LoginActivity"
-      android:launchMode="singleInstance">
+      android:launchMode="singleInstance"
+      android:exported="true">
     </activity>
 
 
