add AuthenticatorService for account sync

--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -423,6 +423,14 @@
     
     <service android:name=".app.PingsService"> 
     </service> 
+    <service android:name=".AuthenticatorService"
+			android:exported="true" android:process=":auth">
+			<intent-filter>
+				<action android:name="android.accounts.AccountAuthenticator" />
+			</intent-filter>
+			<meta-data android:name="android.accounts.AccountAuthenticator"
+				android:resource="@xml/authenticator" />
+		</service>
 
   </application>
 </manifest>
