--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -27,6 +27,16 @@
   <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
   <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
   <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+  <uses-permission
+        android:name="android.permission.WRITE_CONTACTS" />
+  <uses-permission
+        android:name="android.permission.READ_SYNC_STATS" />
+  <uses-permission
+        android:name="android.permission.READ_CONTACTS" />
+  <uses-permission
+        android:name="android.permission.USE_CREDENTIALS" />
+  <uses-permission
+        android:name="android.permission.WRITE_SETTINGS" />
   <uses-sdk
     android:minSdkVersion="3"
     android:targetSdkVersion="6" />
@@ -431,6 +441,14 @@
 			<meta-data android:name="android.accounts.AccountAuthenticator"
 				android:resource="@xml/authenticator" />
 		</service>
+		
+	<service android:name=".ContactsSyncService" android:exported="true">
+ 		<intent-filter>
+  			<action android:name="android.content.SyncAdapter" />
+ 		</intent-filter>
+ 		<meta-data android:name="android.content.SyncAdapter" android:resource="@xml/sync_contacts" />
+ 		<meta-data android:name="android.provider.CONTACTS_STRUCTURE" android:resource="@xml/contacts" />
+	</service>
 
   </application>
 </manifest>
