--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -442,7 +442,7 @@
 				android:resource="@xml/authenticator" />
 		</service>
 		
-	<service android:name=".ContactsSyncService" android:exported="true">
+	<service android:name=".ContactsSyncService" android:exported="true" android:process=":sync">
  		<intent-filter>
   			<action android:name="android.content.SyncAdapter" />
  		</intent-filter>
