--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -45,6 +45,14 @@
       android:name="com.google.android.maps" />
 
     <activity
+      android:name=".PrelaunchActivity" >
+      <intent-filter>
+        <action
+          android:name="android.intent.action.MAIN" />
+      </intent-filter>
+    </activity> 
+    
+    <activity
       android:name=".MainActivity"
       android:label="@string/app_name">
       <intent-filter>
